# personal-ros2-pkgs

./: .gitignore  README.md
src/: text.txt
src/face_recognition/: CMakeLists.txt  package.xml
src/face_recognition/include/face_recognition/: face_recognition_server.hpp
src/face_recognition/src/: face_recognition_client.cpp  face_recognition_server.cpp  register_client.cpp
src/face_recognition/srv/: RecognizeFace.srv  RegisterFace.srv
src/status_interfaces/: CMakeLists.txt  package.xml
src/status_interfaces/msg/: SystemStatus.msg
src/system_status/: CMakeLists.txt  package.xml
src/system_status/include/system_status/: main_window.hpp
src/system_status/src/: main_window.cpp  status_display_main.cpp  system_status_pub.cpp
src/websocket_volc_tts/: CMakeLists.txt  package.xml
src/websocket_volc_tts/include/websocket_volc_tts/: text_provider_node.hpp  websocket_client_node.hpp
src/websocket_volc_tts/src/: text_provider_node.cpp  websocket_client_node.cpp
